--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -2076,7 +2076,6 @@
     "ble_ota_step_stop_title": "Opriți actualizarea firmware-ului?",
     "ble_ota_step_progress_hint1": "Se pregătește actualizarea...",
     "ble_ota_step_progress_hint2": "Se actualizează…",
-    "ble_ota_error_sub_title": "Actualizarea firmware-ului nu a reușit",
     "ble_ota_error_content": "Țineți-vă dispozitivele aproape în timp ce actualizați. Verificați conexiunea Bluetooth.",
     "ble_ota_error_exit": "EXIT UPDATE",
     "ble_ota_unselect_device": "Niciun accesoriu Bluetooth selectat!",
@@ -2602,7 +2601,7 @@
     "fridge_evaporator_sensor": "Senzor evaporator xxxxx",
     "fridge_open_door_alarm": "Deschiderea și închiderea ușii xxxxx",
     "fridge_room_over_temp_alarm": "Temperatura xxxxx-ului dvs.",
-    "update_now": "",
+    "update_now": "Actualizează acum",
     "hour_f_d": "Oră",
     "interior_light_at_power_off": "Lumină interioară la oprire",
     "light_switch": "COMUTATOR DE LUMINĂ",
@@ -2619,12 +2618,12 @@
     "drying_in_x_stopping": "Uscarea în ## este în faza de oprire.",
     "fridge_250_convert_desc": "Compartimentul congelator poate fi convertit în congelator sau zonă inteligentă pentru a satisface cerințele de depozitare ale diferitelor alimente. Când funcția \"Convertiți\" este activată, temperatura frigiderului poate fi setată între 3℃-8℃, iar temperatura congelatorului poate fi setată între -5℃-3℃. Temperatura implicită a frigiderului este de 4℃, iar temperatura implicită a congelatorului este de 0℃.",
     "fridge_213_convert_desc": "Produsul poate fi transformat în congelator sau frigider pentru a satisface cerințele de depozitare ale diferitelor alimente.\nCând funcția Convert este activată, temperatura compartimentului poate fi setată între 2 ° C și 8 ° C, temperatura implicită a frigiderului este de 4 ° C.",
-    "wine_notes_too_long": "",
+    "wine_notes_too_long": "notele sunt prea lungi",
     "wine_cabinet_zone": "Zonă dulap pentru vinuri",
     "change_wifi_program": "Modificarea programului Wi-Fi",
     "change_wifi_program_desc": "Sunteți pe cale să schimbați programul xxxx existent pe dispozitiv în poziția Wi-Fi cu un nou program xxx.",
     "active_wifi_program": "Program Wi-Fi activ",
-    "change_wifi_program_upper": "",
+    "change_wifi_program_upper": "SCHIMBA PROGRAMUL Wi-Fi",
     "change_wifi_program_tips": "Alegeți programul pe care îl doriți pe dispozitiv în poziția programului WI-Fi.",
     "adding_program_to_the_device": "Adăugarea programului la dispozitiv.",
     "adding_program_to_the_device_tips": "Acest lucru poate dura până la 30 de secunde. Toate celelalte funcții ale dispozitivului sunt dezactivate.",
@@ -2774,10 +2773,10 @@
     "asko_offline_content_t": "Asigurați-vă că dulapul dumneavoastră este conectat la o rețea locală wireless.",
     "asko_offline_content_th": "Verificați puterea semnalului WiFi. Dacă semnalul este slab, este posibil ca routerul să fie prea departe de dulap.",
     "hide_clock_on_display": "Ascundeți ceasul de pe afișaj.",
-    "ac_fresh_air": "",
-    "ac_fresh_air_des": "",
-    "ac_both_sides": "",
-    "ac_swing_right": "",
+    "ac_fresh_air": "Aer proaspat",
+    "ac_fresh_air_des": "Introduce aer proaspăt în cameră prin purificare stratificată, făcând oamenii plini de vitalitate.",
+    "ac_both_sides": "Ambele părți",
+    "ac_swing_right": "Dreapta",
     "fridge_fan_failure": "Ventilator xxxxx",
     "duct_at_least_zone_tip": "Vă rugăm să adăugați cel puțin o zonă.",
     "ac_energy_confirmation": "Confirmare",
@@ -2853,7 +2852,7 @@
     "oven_atag_extras_reheat": "Reîncălzire/regenerare",
     "oven_atag_extras_reheat_content": "Această funcție regenerează mâncărurile pre-gătite. Cu utilizarea aburului, nu se pierde calitatea. Gustul și texturile sunt păstrate, ca atunci când sunt proaspăt preparate. Pot fi preparate mai multe feluri de mâncare simultan.",
     "oven_atag_extras_clean_with_preserving": "Păstrarea",
-    "oven_atag_extras_clean_with_preserving_content": "",
+    "oven_atag_extras_clean_with_preserving_content": "Procesul prin care prelungim perioada de valabilitate a alimentelor.",
     "device_has_available_upgrade_strategy": "O strategie de upgrade este disponibilă pentru acest dispozitiv.",
     "bake_step_gratin_below": "Gratin de jos",
     "update_device_firmware": "Actualizare aplicație",
@@ -2997,7 +2996,7 @@
     "select_room_for_more_detail": "Selectați camera pentru mai multe detalii",
     "add_3d_rooms_key": "Adăugați camere 3D",
     "select_room_to_edit": "Selectați camera de editat",
-    "drag_rooms_to_the_building_area": "",
+    "drag_rooms_to_the_building_area": "Trageți și plasați camerele în zona clădirii",
     "add_floor": "Adăugați podea?",
     "add_floor_tip_key": "Dispozitivele actuale vor fi amplasate la etajul 1. Le puteți muta mai târziu.",
     "select_rooms_in_your_home_key": "Selectați camere din casa dvs.",
@@ -3422,7 +3421,7 @@
     "enable_auto_dose_desc": "Acest lucru va activa/dezactiva pe dispozitivul dvs.",
     "tank_refilled_tips": "Notă: ## trebuie reumplut",
     "dosing_type": "",
-    "dose_level": "",
+    "dose_level": "nivelul dozei",
     "tank_a_dosing_type_desc": "",
     "tank_b_dosing_type_desc": "",
     "tank_a_dose_level_desc": "",
@@ -3431,7 +3430,7 @@
     "click_here": "",
     "oven_hi8_setup_1": "",
     "oven_hi8_setup_2": "",
-    "oven_hi8_setup_3": "",
+    "oven_hi8_setup_3": "Rețeaua dispozitivului este acum deschisă pentru conectare. \nFaceți clic pe NEXT pentru a continua.",
     "oven_hi8_pair_2": "",
     "oven_hi8_pair_3": "",
     "program_tank_a_desc": "",
@@ -3530,7 +3529,7 @@
     "blue_power_off_title": "Porniți Bluetooth",
     "blue_permission_off_title": "ConnectLife nu are permisiunea de a utiliza Bluetooth",
     "allow_bluetooth": "",
-    "blue_permission_off_pop_title": "",
+    "blue_permission_off_pop_title": "ConnectLife folosește Bluetooth pentru a găsi, conecta și determina poziția dispozitivelor din apropiere. Puteți schimba oricând setările din setările de sistem ale telefonului dvs.",
     "blue_ios_setting": "",
     "blue_cancel": "CONTINUA FĂRĂ BLUETOOTH",
     "blue_power_off_pop_title": "ConnectLife dorește să activeze Bluetooth pentru acest dispozitiv",
@@ -3568,7 +3567,7 @@
     "add_new": "Adăugare nou",
     "chef_recipe": "",
     "recipe_assistant": "",
-    "shopping_list": "",
+    "shopping_list": "Lista de cumparaturi",
     "scanned_code_not_recognized": "Codul scanat nu a fost recunoscut",
     "scan_correct_device_code": "Scanați codul corect al dispozitivului",
     "best_for": "",
@@ -3594,7 +3593,7 @@
     "start_end_tip": "“Ora de începere” și “Ora de sfârșit” nu pot fi la fel.",
     "filter_result_of": "",
     "asko_oven_language": "",
-    "asko_oven_modes": "",
+    "asko_oven_modes": "Moduri",
     "asko_oven_control": "",
     "asko_oven_show_date": "",
     "previous": "",
@@ -3609,7 +3608,7 @@
     "recipe_type_desserts": "",
     "recipe_type_lunches": "",
     "recipe_type_main_dishes": "",
-    "recipe_type_sider_disher": "",
+    "recipe_type_sider_disher": "Garnitură",
     "recipe_main_ingredients_vegetables": "",
     "recipe_main_ingredients_savoury_pastries": "",
     "recipe_main_ingredients_grains": "",
@@ -3634,7 +3633,7 @@
     "our_recommendation": "",
     "no_search_results": "",
     "let_us_try_another_word": "",
-    "no_device_search": "",
+    "no_device_search": "Nu a fost căutat niciun dispozitiv",
     "no_device_confirm": "Vă rugăm să confirmați că gateway-ul este conectat efectiv la sistemul de aer condiționat",
     "cook_with_##": "",
     "asko_oven_set_time_date": "",
@@ -3648,7 +3647,7 @@
     "wm_program_mode_time_care_1_desc": "",
     "asko_oven_adaptive_brightness": "",
     "online_tip": "online",
-    "atw_tip": "",
+    "atw_tip": "ATW",
     "close_all": "Închideți Tot",
     "circle_mode_des": "Modul de lucru al canalului 1 și al canalului 2 este același",
     "select_c_m": "Alegeți Tipul Circuitului",
@@ -3657,7 +3656,7 @@
     "all_day": "Toată ziua",
     "asko_oven_display_setting_content": "",
     "asko_oven_brightness_content": "",
-    "asko_oven_display_content": "",
+    "asko_oven_display_content": "Setați dimensiunea fontului pentru text pe afișajul de vin.",
     "asko_oven_show_date_content": "",
     "asko_oven_show_bg_content": "",
     "asko_oven_light_setting_content": "",
@@ -3668,13 +3667,13 @@
     "asko_oven_brightness_light_content": "",
     "asko_oven_time_out_content": "",
     "asko_oven_control_settings": "",
-    "asko_oven_control_setting_content": "",
+    "asko_oven_control_setting_content": "Setați luminozitatea ecranului dispozitivului dvs., schimbați tema de culoare, dimensiunea fontului și setați când ecranul dispozitivului dvs. intră în modul de așteptare.",
     "asko_oven_camera_content": "",
-    "asko_oven_proximity_sensor": "",
+    "asko_oven_proximity_sensor": "Senzor de proximitate",
     "asko_oven_proximity_sensor_content": "",
     "asko_oven_distant_user_detected": "",
-    "asko_oven_display_change_to": "",
-    "asko_oven_light_change_to": "",
+    "asko_oven_display_change_to": "Afișează modificările la",
+    "asko_oven_light_change_to": "Luminile se schimbă în",
     "asko_oven_door_sensor_wake_up": "",
     "asko_oven_door_sensor_wake_up_content": "",
     "asko_oven_brand_splash": "",
@@ -3684,8 +3683,8 @@
     "asko_oven_inactivity_time_out_content": "",
     "asko_oven_duration_of_clock": "",
     "asko_oven_duration_of_clock_content": "",
-    "dw_dish_assist": "",
-    "dw_help_support": "",
+    "dw_dish_assist": "Asistență la spălat vase",
+    "dw_help_support": "Ajutor și asistență",
     "dryer_link": "Legătură pentru uscător",
     "dryer_link_tips": "Cu funcția Uscator de scame activată, programul dvs. de spălare este transferat automat la uscătorul de rufe selectat după terminarea spălării.",
     "enable_on_this_appliance": "Activați pe acest aparat",
@@ -3694,7 +3693,7 @@
     "steam_disinfection": "",
     "asko_oven_light_brightness": "",
     "asko_oven_sound_alarms": "",
-    "asko_oven_eco_mode_content": "",
+    "asko_oven_eco_mode_content": "Ajută la reducerea consumului de energie și economisește energie electrică. Aparatul va continua să funcționeze, în timp ce funcțiile suplimentare precum lumina, afișajul, senzorul de proximitate și ușa vor fi dezactivate.",
     "dw_error_desc_f11": "Ieșirea apei",
     "dw_error_desc_f12": "Intrarea apei",
     "dw_error_desc_f40": "Valva de admisie",
@@ -3728,31 +3727,31 @@
     "delete_all_schedu_tips": "Sigur doriți să ștergeți toate programările?",
     "edit_scheduling": "Editează programarea",
     "target_key": "țintă",
-    "asko_oven_factory_reset_content": "",
+    "asko_oven_factory_reset_content": "Aparatul poate fi resetat la setările implicite din fabrică.",
     "invalid_input": "",
     "key": "Romanian 罗马尼亚语",
     "filename": "i18n_ro.json",
-    "asko_td_eco_cotton": "",
-    "asko_td_eco_cotton_us": "",
-    "asko_td_storage_dry_cotton": "",
-    "asko_iron_dry_cotton": "",
-    "asko_td_mixed_laundry": "",
-    "asko_td_delicates": "",
-    "asko_td_wool_silk": "",
-    "asko_td_synthetic": "",
-    "asko_td_beddings_Towels": "",
-    "asko_td_down_bulky_items": "",
-    "asko_td_quick_pro_cotton": "",
-    "asko_td_time_program": "",
-    "asko_td_activewear": "",
-    "asko_td_jeans": "",
-    "asko_td_shirts_blouses": "",
-    "asko_td_anti_allergy": "",
-    "asko_td_waterproofing": "",
-    "asko_td_steam_wrinkle_care": "",
-    "asko_td_steam_refresh": "",
-    "asko_td_airing": "",
-    "asko_td_drum_sanitize": "",
+    "asko_td_eco_cotton": "Bumbac ECO",
+    "asko_td_eco_cotton_us": "Normal",
+    "asko_td_storage_dry_cotton": "Depozitare bumbac uscat",
+    "asko_iron_dry_cotton": "Bumbac uscat (pentru călcare)",
+    "asko_td_mixed_laundry": "Rufe mixte",
+    "asko_td_delicates": "Delicate",
+    "asko_td_wool_silk": "Lână / Mătase",
+    "asko_td_synthetic": "Sintetic",
+    "asko_td_beddings_Towels": "Lenjerie de pat / Prosoape",
+    "asko_td_down_bulky_items": "Articole de jos / voluminoase",
+    "asko_td_quick_pro_cotton": "Bumbac Quick Pro",
+    "asko_td_time_program": "Program orar",
+    "asko_td_activewear": "Îmbrăcăminte activă",
+    "asko_td_jeans": "Blugi",
+    "asko_td_shirts_blouses": "Cămăși / Bluze",
+    "asko_td_anti_allergy": "Anti-alergie",
+    "asko_td_waterproofing": "Hidroizolarea",
+    "asko_td_steam_wrinkle_care": "Îngrijirea cutelor cu abur",
+    "asko_td_steam_refresh": "Reîmprospătați cu abur",
+    "asko_td_airing": "Aerisire",
+    "asko_td_drum_sanitize": "Dezinfectarea tamburului",
     "gorenje_td_cotton_storage": "Depozitare bumbac",
     "gorenje_td_standard": "Standard",
     "gorenje_td_iron": "Călcat",
@@ -3887,7 +3886,7 @@
     "energy_saving_proportion": "Proporția economisirii energiei",
     "total_saved_key": "Economii totale",
     "saved_by_devices_key": "Economii realizate de dispozitive",
-    "usage_proportion_key": "Proporția de utilizare",
+    "usage_proportion_key": "Consumul de energie pe dispozitiv",
     "others_key": "Altele",
     "assistant_key": "Asistent",
     "total_runtime_hours_key": "Timp total de rulare ## ore",
@@ -3906,8 +3905,8 @@
     "about_energy_saving_key": "Proporția economisirii energiei",
     "rf_uv_tech_desc": "Iluminarea UV încorporată va reduce automat 99,99%* din bacteriile din calea apei.",
     "other_rinse": "",
-    "search_again_title": "",
-    "search_again_content": "",
+    "search_again_title": "Confirmați pentru a căuta din nou?",
+    "search_again_content": "Căutarea va actualiza numărul de dispozitive, iar funcția de control nu va fi disponibilă în timpul procesului de căutare.",
     "select_at_least_one_device": "Vă rugăm să selectați cel puțin un dispozitiv.",
     "ri_select_address_tips": "",
     "default_address": "",
@@ -3944,5 +3943,56 @@
     "wm86_and_td76_ui1_p_step2": "Întoarceți cunoștințele pentru a trece la „Adăugați dispozitiv” și faceți clic pe „Enter”.",
     "how_data_is_calculate_key": "Cum sunt calculate datele",
     "energy_select_device_ktip_key": "Vă rugăm să rețineți că puteți porni modul ECO doar pe dispozitivele în funcțiune.",
-    "CL_SM_CM_devices_are_running_eco_mode": "## dispozitive rulează ECOmode"
+    "CL_DV_OV_g800_mode_bottom_top": "Încălzire inferioară + superioară",
+    "CL_DV_OV_g800_mode_hot_air": "Aer cald",
+    "CL_DV_OV_g800_mode_eco_hot_air": "Aer cald ECO",
+    "CL_DV_OV_g800_mode_hotair_bottom": "Aer cald + încălzitor inferior",
+    "CL_DV_OV_g800_mode_large_grill": "Grătar mare",
+    "CL_DV_OV_g800_mode_largegrill_fan": "Grătar mare + ventilator",
+    "CL_DV_OV_g800_mode_hotair_microwave": "Aer cald + microunde",
+    "CL_DV_OV_g800_mode_microwave": "Microunde",
+    "CL_DV_OV_g800_mode_defrost": "Decongelare",
+    "CL_DV_OV_g800_mode_keep_warm": "Păstrare la cald",
+    "CL_DV_OV_g800_mode_plate_warming": "Încălzire farfurie",
+    "CL_DV_OV_g800_mode_aqua_clean": "Curățare cu apă",
+    "CL_DV_OV_g800_mode_steam_clean": "Curățare cu aburi",
+    "CL_DV_OV_g800_mode_regenerate": "Regenerare",
+    "CL_DV_OV_g800_mode_descaling": "Detartrare",
+    "CL_DV_OV_g800_mode_sous_vide": "Sous vide",
+    "CL_DV_OV_g800_mode_steam": "Abur",
+    "CL_DV_OV_g800_mode_sabbath": "Sabat",
+    "CL_DV_OV_g800_mode_pyrolysis": "Piroliză",
+    "CL_DV_OV_g800_mode_air_fry": "Prăjire la aer",
+    "CL_DV_OV_g800_mode_largegrill_bottom_heater": "Grătar mare + încălzitor inferior",
+    "CL_DV_OV_g800_mode_hotair_upperheater": "Aer cald +încălzitor superior",
+    "CL_DV_OV_g800_mode_hot_air_grill": "Aer cald + grătar",
+    "CL_DV_OV_g800_mode_bottomheater_Grill": "Încălzitor inferior + grătar + ventilator",
+    "CL_DV_OV_g800_mode_bottomheater_grill_fan": "Încălzitor inferior + grătar + ventilator",
+    "CL_DV_OV_g800_mode_dehydrate": "Deshidratare",
+    "CL_DV_OV_g800_mode_largegrill_bottomheater_hotair": "Grătar mare + încălzitor inferir + aer cald",
+    "CL_DV_OV_g800_mode_largegrill_fan_microwave": "Grătar mare + ventilator + microunde",
+    "CL_DV_OV_g800_mode_oven_drying": "Uscarea la cuptor",
+    "CL_DV_OV_g800_mode_proofing": "Dospire",
+    "CL_DV_OV_g800_mode_reheat": "Reîncălzire",
+    "CL_DV_OV_g800_mode_preserving": "Conservare",
+    "CL_DV_OV_g800_mode_sterilise_bottles": "Sterilizare sticle",
+    "CL_SM_CM_devices_are_running_eco_mode": "## dispozitive rulează ECOmode",
+    "CL_DV_OV_g800_add_steam_to": "Adăugați abur în procesul de coacere.",
+    "CL_DV_OV_g800_steam_intensity": "Intensitatea aburului",
+    "CL_DV_OV_g800_steam_duration": "Durata aburului",
+    "CL_CF_AB_about_cl_content": "ConnectLife este o platformă IoT cuprinzătoare care integrează perfect aparate inteligente de la mărcile grupului Hisense, oferind utilizatorilor posibilitatea de a-și controla și monitoriza dispozitivele de la distanță. Oferă notificări în timp real, asistență automată post-vânzare și asistență utile pentru utilizarea optimă a aparatului. Platforma pune accent pe confort, eficiență și pe o experiență personalizată de acasă inteligentă, făcând sarcinile de zi cu zi mai simple și mai plăcute. Evoluția continuă a ConnectLife promite să-și extindă capacitățile, îmbunătățind și mai mult ecosistemul modern al casei inteligente.",
+    "CL_CF_AB_licenses_and_attributions": "Licențe și Atribuții",
+    "CL_CF_AB_licenses_content": "Această aplicație folosește următoarele proiecte și active open-source: \n\n Font: Roboto\n Licențiat conform licenței Apache, versiunea 2.0 Copyright 2011 Google Inc.",
+    "CL_CF_AB_term_and_cond": "Termeni și condiții",
+    "CL_CF_LG_enduser_terms": "Termeni și condiții pentru utilizatorul final",
+    "CL_CF_LG_enduser_consent_title": "Consimțământul privind confidențialitatea datelor",
+    "CL_CF_LG_enduser_consent_content": "Cu acest consimțământ confirmați că sunteți pe deplin conștient de scopul prelucrării datelor dumneavoastră cu caracter personal, așa cum este determinat de Politica de protecție a datelor (URL) și sunteți de acord ca compania ConnectLife, LLC. poate utiliza datele dumneavoastră cu caracter personal pentru serviciile menționate mai jos.",
+    "CL_CF_LG_accept_all": "Accepta toate",
+    "CL_CF_LG_product_feedback": "Invitație de a trimite feedback despre produs",
+    "CL_CF_LG_product_feedback_content": "Ne angajăm să ne îmbunătățim produsele. Ne propunem să ne asigurăm că recenziile despre produse sunt trimise cumpărătorului sau utilizatorului real cu consimțământ. Vă putem contacta în termen de 30 de zile de la livrarea produsului, pe baza interesului nostru legitim de a îmbunătăți îmbunătățirea produsului, asigurarea calității și satisfacția clienților.",
+    "CL_CF_LG_receive_personalized_offers": "Primiți Oferte Personalizate",
+    "CL_CF_LG_receive_content": "Scopul și baza este de a permite trimiterea de mesaje de marketing sau de a prezenta o ofertă personalizată în funcție de interesele dumneavoastră sau de a îmbunătăți experiența utilizatorului dumneavoastră.",
+    "CL_CF_LG_contact": "Confirmați că sunteți informat că vă puteți retrage oricând consimțământul dat de mai sus în setările contului sau contactând următoarea adresă de e-mail: privacy@connectlife.io",
+    "CL_CF_LG_legal": "Legal",
+    "CL_CF_LG_enduser_privacy": "Politica de confidențialitate a datelor"
 }
