--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -2076,6 +2076,7 @@
     "ble_ota_step_stop_title": "به‌روز‌رسانی سفت‌افزار متوقف شود؟",
     "ble_ota_step_progress_hint1": "در حال آماده‌سازی به‌روز‌رسانی…",
     "ble_ota_step_progress_hint2": "در حال به‌روز‌رسانی…",
+    "ble_ota_error_sub_title": "سفت‌افزار با موفقیت به‌روز‌رسانی شد",
     "ble_ota_error_content": "هنگام به‌روز‌رسانی، دستگاه‌ها را نزدیک نگه دارید.\nاتصال بلوتوث خود را بررسی کنید.",
     "ble_ota_error_exit": "خروج از به‌روز‌رسانی",
     "ble_ota_unselect_device": "هیچ لوازم جانبی بلوتوثی انتخاب نشده است!",
