--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -2076,6 +2076,7 @@
     "ble_ota_step_stop_title": "Opriți actualizarea firmware-ului?",
     "ble_ota_step_progress_hint1": "Se pregătește actualizarea...",
     "ble_ota_step_progress_hint2": "Se actualizează…",
+    "ble_ota_error_sub_title": "Actualizarea firmware-ului nu a reușit",
     "ble_ota_error_content": "Țineți-vă dispozitivele aproape în timp ce actualizați. Verificați conexiunea Bluetooth.",
     "ble_ota_error_exit": "EXIT UPDATE",
     "ble_ota_unselect_device": "Niciun accesoriu Bluetooth selectat!",
